; ModuleID = '/home/carl/AnghaBench/lede/target/linux/generic/files/drivers/net/phy/extr_ar8327.c_ar8327_sw_set_igmp_v3.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/generic/files/drivers/net/phy/extr_ar8327.c_ar8327_sw_set_igmp_v3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.switch_dev = type { i32 }
%struct.switch_attr = type { i32 }
%struct.switch_val = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }
%struct.ar8xxx_priv = type { i32 }

@AR8327_REG_FRAME_ACK_CTRL1 = common dso_local global i32 0, align 4
@AR8327_FRAME_ACK_CTRL_IGMP_V3_EN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ar8327_sw_set_igmp_v3(%struct.switch_dev* %0, %struct.switch_attr* %1, %struct.switch_val* %2) #0 {
  %4 = alloca %struct.switch_dev*, align 8
  %5 = alloca %struct.switch_attr*, align 8
  %6 = alloca %struct.switch_val*, align 8
  %7 = alloca %struct.ar8xxx_priv*, align 8
  store %struct.switch_dev* %0, %struct.switch_dev** %4, align 8
  store %struct.switch_attr* %1, %struct.switch_attr** %5, align 8
  store %struct.switch_val* %2, %struct.switch_val** %6, align 8
  %8 = load %struct.switch_dev*, %struct.switch_dev** %4, align 8
  %9 = call %struct.ar8xxx_priv* @swdev_to_ar8xxx(%struct.switch_dev* %8)
  store %struct.ar8xxx_priv* %9, %struct.ar8xxx_priv** %7, align 8
  %10 = load %struct.ar8xxx_priv*, %struct.ar8xxx_priv** %7, align 8
  %11 = getelementptr inbounds %struct.ar8xxx_priv, %struct.ar8xxx_priv* %10, i32 0, i32 0
  %12 = call i32 @mutex_lock(i32* %11)
  %13 = load %struct.switch_val*, %struct.switch_val** %6, align 8
  %14 = getelementptr inbounds %struct.switch_val, %struct.switch_val* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %23

18:                                               ; preds = %3
  %19 = load %struct.ar8xxx_priv*, %struct.ar8xxx_priv** %7, align 8
  %20 = load i32, i32* @AR8327_REG_FRAME_ACK_CTRL1, align 4
  %21 = load i32, i32* @AR8327_FRAME_ACK_CTRL_IGMP_V3_EN, align 4
  %22 = call i32 @ar8xxx_reg_set(%struct.ar8xxx_priv* %19, i32 %20, i32 %21)
  br label %28

23:                                               ; preds = %3
  %24 = load %struct.ar8xxx_priv*, %struct.ar8xxx_priv** %7, align 8
  %25 = load i32, i32* @AR8327_REG_FRAME_ACK_CTRL1, align 4
  %26 = load i32, i32* @AR8327_FRAME_ACK_CTRL_IGMP_V3_EN, align 4
  %27 = call i32 @ar8xxx_reg_clear(%struct.ar8xxx_priv* %24, i32 %25, i32 %26)
  br label %28

28:                                               ; preds = %23, %18
  %29 = load %struct.ar8xxx_priv*, %struct.ar8xxx_priv** %7, align 8
  %30 = getelementptr inbounds %struct.ar8xxx_priv, %struct.ar8xxx_priv* %29, i32 0, i32 0
  %31 = call i32 @mutex_unlock(i32* %30)
  ret i32 0
}

declare dso_local %struct.ar8xxx_priv* @swdev_to_ar8xxx(%struct.switch_dev*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @ar8xxx_reg_set(%struct.ar8xxx_priv*, i32, i32) #1

declare dso_local i32 @ar8xxx_reg_clear(%struct.ar8xxx_priv*, i32, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
